Add JWT, change MVC -> REST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+server.servlet.context-path=/api
+
 #PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/mngdb
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=create-drop
+
 
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=TRACE
